#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([hoba], [0.1], [zhang_zhao_fu@sina.com])
#AC_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/hobad.cpp])
AC_CONFIG_HEADERS([src/config/config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
